--- a/.env
+++ b/.env
@@ -15,3 +15,16 @@
     JWT_REFRESH_SECRET=superrefresco
 
 
+
+# SMTP (Gmail con App Password)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=1
+SMTP_USER=maxtechpruebas@gmail.com
+SMTP_PASS=wroinllkzexkaoqc
+SMTP_FROM="App: Mail, Device: Other (PNC Panic)"
+
+# (opcional, SOLO en dev) devolver la temporal en el body del reset
+RETURN_TEMP_PASSWORD=1
+
+
