--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
-    "uuid": "^9.0.1",
+    "nodemailer": "^6.10.1",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "swagger-jsdoc": "^6.2.8"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
